# hvcc_gsph

./: .gitignore  CHECKPOINT_COMPLETE_SUMMARY.md  CHECKPOINT_DEMO_INSTRUCTIONS.md  CHECKPOINT_README.md  CHECKPOINT_TUTORIAL.md  CLEANUP_AND_REDESIGN_PLAN.md  CMakeLists.txt  COMPLETE_FIX_SUMMARY.md  FIXES_APPLIED.md  HOW_TO_USE_CHECKPOINTS.md  IMPLEMENTATION_ROADMAP.md  LICENSE  Makefile  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  PHASE6_COMPLETE.md  README.md  TODO.md  checkpoint_demo.sh  example_checkpoint_config.json  example_resume_config.json  flake.nix  pyproject.toml  simulation_debug.csv  simulation_debug_2d.csv
include/: CMakeLists.txt  bhtree.hpp  defines.hpp  density_relaxation.hpp  exception.hpp  gravity_force.hpp  heating_cooling.hpp  lane_emden.hpp  lane_emden_2d.hpp  logger.hpp  module_factory.hpp  output.hpp  parameters.hpp  particle.hpp  pre_interaction.hpp  sample_registry.hpp  simulation.hpp  solver.hpp  timestep.hpp  unit_system.hpp  vector_type.hpp
include/algorithms/: CMakeLists.txt
include/algorithms/disph/: d_fluid_force.hpp  d_pre_interaction.hpp
include/algorithms/gdisph/: CMakeLists.txt  gdi_fluid_force.hpp  gdi_pre_interaction.hpp
include/algorithms/gsph/: CMakeLists.txt  g_fluid_force.hpp  g_pre_interaction.hpp
include/algorithms/ssph/: CMakeLists.txt
include/core/: CMakeLists.txt  output_format.hpp  parameters.hpp  particle.hpp  plugin_loader.hpp  sample_registry.hpp  simulation.hpp  simulation_loader.hpp  simulation_plugin.hpp  simulation_run.hpp  solver.hpp
include/disph/: CMakeLists.txt  d_pre_interaction.hpp
include/gdisph/: CMakeLists.txt  gdi_fluid_force.hpp  gdi_pre_interaction.hpp
include/gsph/: g_fluid_force.hpp  g_pre_interaction.hpp
include/kernel/: CMakeLists.txt  anisotropic_kernel.hpp  cubic_spline.hpp  kernel_function.hpp  wendland_kernel.hpp
include/modules/: CMakeLists.txt  fluid_force.hpp  gravity_force.hpp  heating_cooling.hpp  module_factory.hpp  pre_interaction.hpp  timestep.hpp
include/relaxation/: CMakeLists.txt  density_relaxation.hpp  density_relaxation_base.hpp  lane_emden_data.hpp  lane_emden_relaxation.hpp
include/samples/templates/: README.md  disk_template.hpp  shock_tube_template.hpp
include/shock_detection/: CMakeLists.txt  shock_detection.hpp
include/tree/: CMakeLists.txt  bhtree.hpp  exhaustive_search.hpp
include/utilities/: CMakeLists.txt  FLEXIBLE_UNIT_SYSTEM_README.md  checkpoint_data.hpp  checkpoint_manager.hpp  checkpoint_modifier.hpp  defines.hpp  exception.hpp  flexible_unit_params.hpp  initial_conditions_modifier.hpp  openmp.hpp  periodic.hpp  snapshot_metadata.hpp  unit_conversions.hpp  vector_type.hpp
simulations/kelvin_helmholtz/: CMakeLists.txt  README.md  build.sh  config.json  kelvin_helmholtz.cpp
simulations/razor_thin_hvcc/: CMakeLists.txt  README.md  build.sh  config.json  razor_thin_hvcc.cpp
simulations/sedov_taylor/: CMakeLists.txt  build.sh  latest  sedov_taylor.json
simulations/sedov_taylor_2d_gdisph/: CMakeLists.txt  QUICKSTART.md  README.md  build.sh  config.json  sedov_taylor_2d.cpp
simulations/template/: CMakeLists.txt  README.md  template_simulation.cpp
simulations/workflows/razor_thin_hvcc_gdisph_workflow/01_relaxation/: .gitignore  CMakeLists.txt  LANE_EMDEN_README.md  README.md  animate_relaxation.py  config.json  config_test.json  disk_relaxation.cpp
simulations/workflows/shock_tube_workflow/01_simulation/: .gitignore  (+4 more)
src/: CMakeLists.txt  bhtree.cpp  density_relaxation.cpp  fluid_force.cpp  gravity_force.cpp  heating_cooling.cpp  inplane_integration.cpp  logger.cpp  main.cpp  output.cpp  pre_interaction.cpp  sample_registry.cpp  shock_detection.cpp  simulation.cpp  solver.cpp  timestep.cpp
src/algorithms/: CMakeLists.txt
src/algorithms/disph/: CMakeLists.txt  d_fluid_force.cpp  d_pre_interaction.cpp
src/algorithms/gdisph/: CMakeLists.txt  gdi_fluid_force.cpp  gdi_pre_interaction.cpp
src/algorithms/gsph/: g_fluid_force.cpp  g_pre_interaction.cpp
src/core/: CMakeLists.txt  logger.cpp  main.cpp  output_format.cpp  sample_registry.cpp  simulation.cpp  simulation_run.cpp  solver.cpp
src/disph/: d_fluid_force.cpp  d_pre_interaction.cpp
src/gdisph/: CMakeLists.txt  gdi_fluid_force.cpp  gdi_pre_interaction.cpp
src/gsph/: CMakeLists.txt  g_fluid_force.cpp  g_pre_interaction.cpp
src/modules/: CMakeLists.txt  fluid_force.cpp  gravity_force.cpp  heating_cooling.cpp  pre_interaction.cpp  timestep.cpp
src/production_sims/: CMakeLists.txt  razor_thin_hvcc.cpp  razor_thin_hvcc_debug.cpp  razor_thin_sg_relaxation.cpp  test_razor_thin_blast_wave.cpp
src/relaxation/: CMakeLists.txt  lane_emden_relaxation.cpp
src/sample/: CMakeLists.txt  evrard.cpp  gresho_chan_vortex.cpp  hydrostatic.cpp  khi.cpp  lane_emden.cpp  lane_emden_2_5_D.cpp  lane_emden_2d.cpp  pairing_instability.cpp  purtabation_damping.cpp  sedov_taylor.cpp  shock_tube.cpp  shock_tube_2d.cpp  shock_tube_2p5d.cpp  shock_tube_2p5d_blastwave.cpp  shock_tube_astro_unit.cpp  shock_tube_heating_cooling.cpp  shock_tube_strong_shock.cpp  thin_disk_3d.cpp  thin_slice_poly_2_5d.cpp  thin_slice_poly_2_5d_anistropic_relax.cpp  thin_slice_poly_2_5d_relax.cpp  vacuum_test.cpp
src/tree/: CMakeLists.txt  bhtree.cpp  exhaustive_search.cpp
src/utilities/: CMakeLists.txt  checkpoint_data.cpp  checkpoint_manager.cpp  inplane_integration.cpp  shock_detection.cpp  snapshot_metadata.cpp
test/: CMakeLists.txt  DISPH_TESTS_README.md  README.md
test/checkpoint_manual/: README.md  test_checkpoint.sh  test_checkpoint_auto.json
test/features/: BDD_TESTS_SPECIFICATION.md  disph.feature  metadata_output.feature  visualization_generation.feature
test/features/checkpoint/: checkpoint.feature
test/kernel_test/: kernel_test.cpp
test/unit_tests/: CMakeLists.txt  checkpoint_basic_test.cpp  checkpoint_data_test.cpp  checkpoint_integration_test.cpp  checkpoint_load_test.cpp  checkpoint_save_test.cpp  test_basic.cpp  test_disph.cpp  test_disph_integration.cpp  test_disph_simple.cpp  test_kernel.cpp  test_particle.cpp  test_simulation.cpp  test_simulation_run_directories.cpp.disabled  test_vector_math.cpp
(+1703 files in other folders)
