# Add subdirectories containing source files
add_subdirectory(core)
add_subdirectory(modules)
add_subdirectory(tree)
add_subdirectory(algorithms)
add_subdirectory(utilities)
# add_subdirectory(sample)  # REMOVED - Legacy samples deleted
# add_subdirectory(samples)  # REMOVED - Migrated to simulations/ as plugins
# add_subdirectory(production_sims)  # REMOVED - Migrated to samples/production
add_subdirectory(relaxation)

