# Organized sample simulations
# Add subdirectories as samples are migrated
add_subdirectory(benchmarks)
# add_subdirectory(instabilities)
# add_subdirectory(gravity)
# add_subdirectory(disks)  # TODO: Fix disk template API issues before enabling
# add_subdirectory(validation)
# add_subdirectory(production)
